# IW3SR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  install.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: application.yaml  build.yaml
.vcpkg/ports/cef/: portfile.cmake
cmake/: FindCEF.cmake
src/: CMakeLists.txt
src/Game/: Application.cpp  Base.hpp  CMakeLists.txt  Plugin.hpp  main.cpp  proxy.def
src/Game/Client/: CMakeLists.txt  Client.cpp  Client.hpp
src/Game/Definitions/: CMakeLists.txt  Declaration.cpp  Declaration.hpp  Defines.hpp  Events.hpp  Functions.cpp  Functions.hpp  Hooks.cpp  Hooks.hpp  Structs.hpp
src/Game/GUI/: CMakeLists.txt  GUI.cpp  GUI.hpp
src/Game/GUI/UI/: About.cpp  About.hpp  Binds.cpp  Binds.hpp  Modules.cpp  Modules.hpp  Settings.cpp  Settings.hpp  Toolbar.cpp  Toolbar.hpp
src/Game/Math/: Math.cpp  Math.hpp
src/Game/Player/: CMakeLists.txt  PMove.cpp  PMove.hpp  Player.cpp  Player.hpp  Prediction.cpp  Prediction.hpp
src/Game/Player/Movements/: CMakeLists.txt  CS.cpp  CS.hpp  CoD4.cpp  CoD4.hpp  Q3.cpp  Q3.hpp
src/Game/Renderer/: CMakeLists.txt  GUI.cpp  GUI.hpp  Renderer.cpp  Renderer.hpp
src/Game/Renderer/Backends/: D3D9.cpp  D3D9.hpp  D3D9EX.cpp  D3D9EX.hpp
src/Game/Renderer/Drawing/: CMakeLists.txt  Draw2D.cpp  Draw2D.hpp  Draw3D.cpp  Draw3D.hpp  Emojis.cpp  Emojis.hpp  HUD.cpp  HUD.hpp  Lines.cpp  Lines.hpp  Text.cpp  Text.hpp
src/Game/Renderer/Modules/: CMakeLists.txt  Module.cpp  Module.hpp  Modules.cpp  Modules.hpp  Setting.cpp  Setting.hpp  Settings.cpp  Settings.hpp
src/Game/Renderer/Resources/: Browser.cpp  Browser.hpp  CMakeLists.txt
src/Game/Renderer/Settings/: CMakeLists.txt  Setting.cpp  Setting.hpp  Settings.cpp  Settings.hpp
src/Game/Renderer/UI/: About.cpp  About.hpp  Binds.cpp  Binds.hpp  CMakeLists.txt  Modules.cpp  Modules.hpp  Settings.cpp  Settings.hpp  Toolbar.cpp  Toolbar.hpp  UI.cpp  UI.hpp
src/Game/System/: CMakeLists.txt  Client.cpp  Client.hpp  Console.cpp  Console.hpp  Dvar.cpp  Dvar.hpp  Patch.cpp  Patch.hpp  System.cpp  System.hpp
src/Loader/: CMakeLists.txt  main.cpp
src/Plugins/Graphics/: Base.hpp  CMakeLists.txt  main.cpp
src/Plugins/Graphics/Modules/: CMakeLists.txt  Texts.cpp  Texts.hpp  Tweaks.cpp  Tweaks.hpp
src/Plugins/Graphics/Settings/: CMakeLists.txt  General.cpp  Tweaks.cpp  Tweaks.hpp
src/Plugins/Player/: CMakeLists.txt  main.cpp
src/Plugins/Player/Modules/: CEF.cpp  CEF.hpp  CGAZ.cpp  CGAZ.hpp  CMakeLists.txt  FPS.cpp  FPS.hpp  KMOV.cpp  KMOV.hpp  Lagometer.cpp  Lagometer.hpp  Movements.cpp  Movements.hpp  StrafeBot.cpp  StrafeBot.hpp  Velocity.cpp  Velocity.hpp
src/Plugins/Player/Movements/: CMakeLists.txt  CS.cpp  CS.hpp  CoD4.cpp  CoD4.hpp  Q3.cpp  Q3.hpp
src/Tools/: CMakeLists.txt
src/Tools/CEF/: CMakeLists.txt  main.cpp
src/Updater/: CMakeLists.txt  main.cpp
